<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fourth_rules_page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/results_screen_winner_background"
        android:fontFamily="@font/antipasto_demibold"
        android:text="@string/additional_points"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/rule_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourth_rules_page_header"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="@font/antipasto_demibold"
        android:text="@string/fourth_rule_page_1"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/rule_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rule_1"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="@font/antipasto_demibold"
        android:text="@string/fourth_rule_page_2"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rule_2"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="@font/antipasto_demibold"
        android:text="@string/fourth_rule_page_3"
        android:textColor="@android:color/black"
        android:textSize="20dp" />



</RelativeLayout>