<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="25dp"
                android:text="@string/change_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_password_old_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/antipasto_demibold"
                android:background="@drawable/dialog_edit_view_background"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:hint="@string/password_hint"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_password_new_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/antipasto_demibold"
                android:background="@drawable/dialog_edit_view_background"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:hint="@string/new_password_hint"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dialog_password_frame_no"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="100dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@android:color/transparent"
            app:backgroundTint="#ff6464" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="6dp"
            android:text="@string/no"
            android:textSize="20dp"
            android:fontFamily="@font/antipasto_bold"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dialog_password_frame_yes"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@android:color/transparent"
            app:backgroundTint="#46d98f"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="6dp"
            android:text="@string/yes"
            android:textSize="20dp"
            android:fontFamily="@font/antipasto_bold"
            android:textColor="@android:color/white"/>
    </FrameLayout>
</FrameLayout>