<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfd"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_header_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/login_header" />

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/antipasto_bold"
        android:text="@string/login_title"
        android:textColor="#e61b1b1b"
        android:textSize="35dp" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="-5dp"
        android:layout_marginEnd="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="-5dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/login_next_btn">

            <EditText
                android:id="@+id/login_email_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_right_view_background"
                android:elevation="7dp"
                android:paddingEnd="20dp"
                android:paddingStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="17dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:drawablePadding="15dp"
                android:drawableEnd="@drawable/ic_email"
                android:fontFamily="@font/antipasto_medium"/>

            <EditText
                android:id="@+id/login_password_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bottom_right_view_background"
                android:elevation="7dp"
                android:paddingEnd="20dp"
                android:paddingStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="17dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:drawablePadding="15dp"
                android:drawableEnd="@drawable/ic_password"
                android:fontFamily="@font/antipasto_medium" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/login_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_button_background"
            android:padding="12dp"
            android:elevation="2dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/ic_arrow_forward_white"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/antipasto_demibold"
        android:text="@string/forgot_password"
        android:textColor="#f13e3e3e"
        android:textSize="15dp" />

    <Button
        android:id="@+id/login_registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_footer_img"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:background="@drawable/sign_in_button_background"
        android:fontFamily="@font/antipasto_bold"
        android:text="@string/registration"
        android:textColor="@android:color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/login_footer_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-10dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/login_footer" />

</RelativeLayout>